Work on Categories, sql export

--- a/data/ETL Pipeline Preparation.ipynb
+++ b/data/ETL Pipeline Preparation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "4  facade ouest d Haiti et le reste du pays aujou...  direct  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "4  12  related-1;request-0;offer-0;aid_related-0;medi..."
       ]
      },
-     "execution_count": 3,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
        "4  related-1;request-0;offer-0;aid_related-0;medi...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1026,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,11 +1034,200 @@
    "source": [
     "for column in categories:\n",
     "    # set each value to be the last character of the string\n",
-    "    categories[column] = categories[column].str.split(\"-\").str[-1]\n",
-    "    \n",
+    "    categories[column] = categories[column].str [-1]\n",
     "    # convert column from string to numeric\n",
-    "    categories[column] = categories[column].astype(int)\n",
+    "    categories[column] = pd.to_numeric (categories[column], errors = 'coerce') \n",
     "categories.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "related [0 1 2]\n",
+      "child_alone [0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for column in categories:\n",
+    "    if len(np.unique(categories[column])) != 2:\n",
+    "        print(column, np.unique(categories[column]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categories['related']=categories['related'].map(lambda x: 1 if x == 2 else x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "related\n",
+      "1    20246\n",
+      "0     6140\n",
+      "Name: related, dtype: int64\n",
+      "request\n",
+      "0    21873\n",
+      "1     4513\n",
+      "Name: request, dtype: int64\n",
+      "offer\n",
+      "0    26265\n",
+      "1      121\n",
+      "Name: offer, dtype: int64\n",
+      "aid_related\n",
+      "0    15432\n",
+      "1    10954\n",
+      "Name: aid_related, dtype: int64\n",
+      "medical_help\n",
+      "0    24287\n",
+      "1     2099\n",
+      "Name: medical_help, dtype: int64\n",
+      "medical_products\n",
+      "0    25067\n",
+      "1     1319\n",
+      "Name: medical_products, dtype: int64\n",
+      "search_and_rescue\n",
+      "0    25661\n",
+      "1      725\n",
+      "Name: search_and_rescue, dtype: int64\n",
+      "security\n",
+      "0    25915\n",
+      "1      471\n",
+      "Name: security, dtype: int64\n",
+      "military\n",
+      "0    25523\n",
+      "1      863\n",
+      "Name: military, dtype: int64\n",
+      "child_alone\n",
+      "0    26386\n",
+      "Name: child_alone, dtype: int64\n",
+      "water\n",
+      "0    24702\n",
+      "1     1684\n",
+      "Name: water, dtype: int64\n",
+      "food\n",
+      "0    23430\n",
+      "1     2956\n",
+      "Name: food, dtype: int64\n",
+      "shelter\n",
+      "0    24044\n",
+      "1     2342\n",
+      "Name: shelter, dtype: int64\n",
+      "clothing\n",
+      "0    25976\n",
+      "1      410\n",
+      "Name: clothing, dtype: int64\n",
+      "money\n",
+      "0    25780\n",
+      "1      606\n",
+      "Name: money, dtype: int64\n",
+      "missing_people\n",
+      "0    26085\n",
+      "1      301\n",
+      "Name: missing_people, dtype: int64\n",
+      "refugees\n",
+      "0    25506\n",
+      "1      880\n",
+      "Name: refugees, dtype: int64\n",
+      "death\n",
+      "0    25182\n",
+      "1     1204\n",
+      "Name: death, dtype: int64\n",
+      "other_aid\n",
+      "0    22922\n",
+      "1     3464\n",
+      "Name: other_aid, dtype: int64\n",
+      "infrastructure_related\n",
+      "0    24677\n",
+      "1     1709\n",
+      "Name: infrastructure_related, dtype: int64\n",
+      "transport\n",
+      "0    25174\n",
+      "1     1212\n",
+      "Name: transport, dtype: int64\n",
+      "buildings\n",
+      "0    25041\n",
+      "1     1345\n",
+      "Name: buildings, dtype: int64\n",
+      "electricity\n",
+      "0    25848\n",
+      "1      538\n",
+      "Name: electricity, dtype: int64\n",
+      "tools\n",
+      "0    26227\n",
+      "1      159\n",
+      "Name: tools, dtype: int64\n",
+      "hospitals\n",
+      "0    26103\n",
+      "1      283\n",
+      "Name: hospitals, dtype: int64\n",
+      "shops\n",
+      "0    26266\n",
+      "1      120\n",
+      "Name: shops, dtype: int64\n",
+      "aid_centers\n",
+      "0    26077\n",
+      "1      309\n",
+      "Name: aid_centers, dtype: int64\n",
+      "other_infrastructure\n",
+      "0    25231\n",
+      "1     1155\n",
+      "Name: other_infrastructure, dtype: int64\n",
+      "weather_related\n",
+      "0    19043\n",
+      "1     7343\n",
+      "Name: weather_related, dtype: int64\n",
+      "floods\n",
+      "0    24209\n",
+      "1     2177\n",
+      "Name: floods, dtype: int64\n",
+      "storm\n",
+      "0    23922\n",
+      "1     2464\n",
+      "Name: storm, dtype: int64\n",
+      "fire\n",
+      "0    26104\n",
+      "1      282\n",
+      "Name: fire, dtype: int64\n",
+      "earthquake\n",
+      "0    23925\n",
+      "1     2461\n",
+      "Name: earthquake, dtype: int64\n",
+      "cold\n",
+      "0    25853\n",
+      "1      533\n",
+      "Name: cold, dtype: int64\n",
+      "other_weather\n",
+      "0    25007\n",
+      "1     1379\n",
+      "Name: other_weather, dtype: int64\n",
+      "direct_report\n",
+      "0    21273\n",
+      "1     5113\n",
+      "Name: direct_report, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "for column in categories:\n",
+    "    print(column)\n",
+    "    print(categories[column].value_counts())"
    ]
   },
   {
@@ -1052,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1327,7 @@
        "4  facade ouest d Haiti et le reste du pays aujou...  direct  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,10 +1341,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 73,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1366,7 +1553,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1375,34 +1562,6 @@
     "# concatenate the original dataframe with the new `categories` dataframe\n",
     "df = pd.concat([df, categories], axis=1)\n",
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['related', 'request', 'offer', 'aid_related', 'medical_help',\n",
-       "       'medical_products', 'search_and_rescue', 'security', 'military',\n",
-       "       'child_alone', 'water', 'food', 'shelter', 'clothing', 'money',\n",
-       "       'missing_people', 'refugees', 'death', 'other_aid',\n",
-       "       'infrastructure_related', 'transport', 'buildings', 'electricity',\n",
-       "       'tools', 'hospitals', 'shops', 'aid_centers', 'other_infrastructure',\n",
-       "       'weather_related', 'floods', 'storm', 'fire', 'earthquake', 'cold',\n",
-       "       'other_weather', 'direct_report'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns[4:]"
    ]
   },
   {
@@ -1417,16 +1576,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "170"
+       "171"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1438,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1448,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1457,7 +1616,7 @@
        "0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1477,12 +1636,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "engine = create_engine('sqlite:///Disaster_Response.db')\n",
-    "df.to_sql('Disaster_Response', engine, index=False)"
+    "df.to_sql('Disaster_Response', engine, index=False,if_exists='replace')"
    ]
   },
   {
@@ -1492,20 +1651,6 @@
     "### 8. Use this notebook to complete `etl_pipeline.py`\n",
     "Use the template file attached in the Resources folder to write a script that runs the steps above to create a database based on new datasets specified by the user. Alternatively, you can complete `etl_pipeline.py` in the classroom on the `Project Workspace IDE` coming later."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1524,7 +1669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
